# CryptoMesh

./: README.md  pyproject.toml
cryptomesh/: config.py  errors.py  server.py
cryptomesh-client/cryptomesh_client/: client.py  config.py
cryptomesh-client/logs/: cryptomesh-client
cryptomesh/controllers/: __init__.py  endpoint_state_controller.py  endpoints_controller.py  function_result_controller.py  function_state_controller.py  functions_controller.py  microservices_controller.py  roles_controller.py  security_policy_controller.py  services_controller.py  storage_controller.py
cryptomesh/db/: __init__.py  reset_db.py
cryptomesh/log/: __init__.py  logger.py
cryptomesh/models/: __init__.py
cryptomesh/orchestrator/: orchestrator.py
cryptomesh/policies/: __init__.py  example_1.yml
cryptomesh/repositories/: base_repository.py  endpoint_state_repository.py  endpoints_repository.py  function_result_repository.py  function_state_repository.py  functions_repository.py  microservices_repository.py  mongo_repository.py  roles_repository.py  security_policy_repository.py  (+2 more)
policies/: example.yml  policy.yml
tests/: conftest.py  pytest.ini  test_api_endpoint.py  test_api_endpoint_state.py  test_api_function_result.py  test_api_function_state.py  test_api_functions.py  test_api_microservice.py  test_api_role.py  test_api_security_policy.py  test_api_service.py  test_endpoints.py  test_function_result.py  test_function_state.py  test_functions.py  test_microservices.py  test_mongo_repository.py  test_roles.py  test_security_policy.py  test_service.py
(+30 files in other folders)
